welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: not found: value bsmile
	if (aSmile && bsmile ) 
                      ^monkeyTrouble:6: error: type mismatch;
 found   : Unit
 required: Boolean
	if (aSmile || bSmile ) {
        ^