welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if (aSmile && bsmile ) 
	{ return true
	}
	else  return false
	if (aSmile || bSmile ) {
	return false 	
	}
}
